--- a/requirements.txt
+++ b/requirements.txt
@@ -7,5 +7,5 @@ Pillow
 https://github.com/prgofficial/pyrogram/archive/asyncio-dev.zip
 requests
 tgcrypto
-#youtube-dl
-git+https://github.com/TGExplore/youtube-dl.git
+youtube-dl
+olefile
