--- a/app.json
+++ b/app.json
@@ -1,6 +1,7 @@
 {
   "name": "TG URL Uploader 1.0",
   "description": "Telegram's best Open Source ALL-In-One Multi Purpose RoBot. Create your Fork now.",
+  "logo": "https://telegra.ph/file/42df73b91cfcd677230ee.png"
   "keywords": [
     "telegram",
     "best",
