--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-aiohttp==3.7.4
+aiohttp
 beautifulsoup4
 git+git://github.com/google/chatbase-python.git
 hachoir
@@ -7,6 +7,6 @@ Pillow
 https://github.com/prgofficial/pyrogram/archive/asyncio-dev.zip
 requests
 tgcrypto
-youtube_dl==2021.03.25
+youtube_dl
 olefile
-newrelic==6.0.1.155
+newrelic
